# mkdocs-plugin-tags

./: .gitignore  README.md  pyproject.toml  pytest.ini  setup.py
tags/: plugin.py
tags/templates/: tags.md.template
tests/: __init__.py  test_plugin.py
